--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,16 @@
+.git
+.idea
+.vs
+.vscode
+.PVS-Studio
 
-# Godot-specific ignores
-.import/
-export.cfg
-export_presets.cfg
+bin/
+build/
+SandBox/cmake-build-*/
+SandBox/out/
+SandBox/CMakeSettings.json
 
-# Mono-specific ignores
-.mono/
-data_*/
+Folder.DotSettings.user
+Folder.DotSettings
+
+Oneiro.code-workspace
